[gd_scene load_steps=8 format=3 uid="uid://by7yopupguxum"]

[ext_resource type="Script" uid="uid://dt24ick7yy8hh" path="res://Scripts/main.gd" id="1_6bp64"]
[ext_resource type="PackedScene" uid="uid://bsrym2ob4rqra" path="res://Scenes/hand.tscn" id="2_344ge"]
[ext_resource type="Script" uid="uid://ckojxqcmxewne" path="res://Scripts/deck.gd" id="3_ynf5e"]
[ext_resource type="Texture2D" uid="uid://dtr1axxdn8v37" path="res://Assets/CardTextures/Magical Mayhem spell deck back.png" id="4_hptm8"]
[ext_resource type="Script" uid="uid://ooxh4s44wy1e" path="res://Scripts/discard.gd" id="5_d1ilt"]
[ext_resource type="Texture2D" uid="uid://b4jkaj23t7eq1" path="res://icon.svg" id="6_6iyac"]
[ext_resource type="PackedScene" uid="uid://5ltupmc1dn21" path="res://Scenes/wizard.tscn" id="7_6bp64"]

[node name="main" type="Node2D"]
script = ExtResource("1_6bp64")

[node name="Hand" parent="." instance=ExtResource("2_344ge")]
hand_center = Vector2(640, 400)

[node name="Deck" type="Node2D" parent="."]
position = Vector2(36, 472)
script = ExtResource("3_ynf5e")

[node name="DeckSprite" type="TextureRect" parent="Deck"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 152.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_hptm8")
expand_mode = 1

[node name="Poptimer" type="Timer" parent="Deck"]
wait_time = 0.1
one_shot = true

[node name="Discard" type="Node2D" parent="."]
position = Vector2(1092, 472)
script = ExtResource("5_d1ilt")

[node name="DiscardSprite" type="TextureRect" parent="Discard"]
offset_right = 152.0
offset_bottom = 208.0
texture = ExtResource("6_6iyac")
expand_mode = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 530.0
offset_top = 640.0
offset_right = 640.0
offset_bottom = 704.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Cards"

[node name="Wizard" parent="." instance=ExtResource("7_6bp64")]

[node name="AdvancePhase" type="Button" parent="."]
offset_left = 46.0
offset_top = 79.0
offset_right = 219.0
offset_bottom = 192.0
text = "Advance Phase"

[node name="Label" type="Label" parent="."]
offset_left = 570.0
offset_top = 66.0
offset_right = 882.0
offset_bottom = 153.0

[connection signal="gui_input" from="Deck/DeckSprite" to="Deck" method="_on_deck_sprite_gui_input"]
[connection signal="mouse_entered" from="Deck/DeckSprite" to="Deck" method="_on_deck_sprite_mouse_entered"]
[connection signal="mouse_exited" from="Deck/DeckSprite" to="Deck" method="_on_deck_sprite_mouse_exited"]
[connection signal="mouse_entered" from="Discard/DiscardSprite" to="Discard" method="_on_discard_sprite_mouse_entered"]
[connection signal="mouse_exited" from="Discard/DiscardSprite" to="Discard" method="_on_discard_sprite_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AdvancePhase" to="." method="_on_advance_phase_pressed"]
